feat: add language files and translation system

--- a/src/main/resources/assets/authshield/lang/en_us.json
+++ b/src/main/resources/assets/authshield/lang/en_us.json
@@ -1,28 +1,52 @@
 {
-  "authshield.title": "§c§lLogin Required",
-  "authshield.subtitle": "§eUse /login <password> to play",
-  "authshield.actionbar": "§7Please login to continue",
-  "authshield.register": "§ePlease register using /register <password> <confirmPassword>",
-  "authshield.login": "§ePlease login using /login <password>",
+  "authshield.title": "§dWelcome to the server",
+  "authshield.subtitle": "§ePlease type /login <password> to login",
+  "authshield.actionbar": "§7Please login to perform actions",
+  "authshield.register": "§ePlease use /register <password> <confirmPassword> to register",
+  "authshield.login": "§ePlease use /login <password> to login",
   "authshield.login.title": "§c§lLogin Required",
   "authshield.login.subtitle": "§eUse /login <password> to play",
-  "authshield.login.success": "§aLogged in successfully",
-  "authshield.login.already": "§eYou are already logged in",
+  "authshield.login.success": "§aLogin successful!",
+  "authshield.login.already": "§cYou are already logged in",
   "authshield.login.incorrect": "§cIncorrect password",
-  "authshield.login.timeout": "§cYou have been kicked for not logging in within 60 seconds",
-  "authshield.login.too_many_attempts": "§cToo many login attempts. Please try again in %s minutes",
-  "authshield.command.needlogin": "§cYou must be logged in to execute this command",
-  "authshield.register.exists": "§cYou are already registered. Please log in",
-  "authshield.register.nomatch": "§cPasswords do not match. Please try again",
-  "authshield.register.success": "§aRegistration successful. You can now log in",
+  "authshield.login.timeout": "§cLogin timeout, please rejoin the server",
+  "authshield.login.too_many_attempts": "§cToo many login attempts, please try again in %d minutes",
+  "authshield.command.needlogin": "§cPlease login before using commands",
+  "authshield.register.exists": "§cThis account is already registered",
+  "authshield.register.nomatch": "§cPasswords do not match",
+  "authshield.register.success": "§aRegistration successful!",
   "authshield.register.password.tooshort": "§cPassword is too short (minimum %s characters)",
   "authshield.register.password.toolong": "§cPassword is too long (maximum %s characters)",
   "authshield.register.password.needsymbol": "§cPassword must contain at least one special character",
   "authshield.register.password.needupper": "§cPassword must contain at least one uppercase letter",
   "authshield.register.password.neednumber": "§cPassword must contain at least one number",
-  "authshield.drop.needlogin": "§cYou must be logged in to drop items",
+  "authshield.drop.needlogin": "§cPlease login before dropping items",
   "authshield.mod.welcome": "Welcome to use AuthShield mod",
   "authshield.error.init": "Failed to initialize AuthShield",
   "authshield.error.load_password": "Failed to load password file",
-  "authshield.info.password_loaded": "AuthShield password data loaded"
+  "authshield.info.password_loaded": "AuthShield password data loaded",
+  "authshield.login.not_registered": "§cYou are not registered",
+  "authshield.changepassword.not_logged_in": "§cPlease login before changing password",
+  "authshield.changepassword.incorrect": "§cOld password is incorrect",
+  "authshield.changepassword.same": "§cNew password cannot be the same as old password",
+  "authshield.changepassword.success": "§aPassword changed successfully!",
+  "authshield.unregister.no_permission": "§cYou don't have permission to use this command",
+  "authshield.unregister.not_found": "§cCannot find player %s",
+  "authshield.unregister.success": "§aUnregistered player %s",
+  "authshield.unregister.kick_message": "§cYour registration has been removed by an admin",
+  "authshield.setfirstspawn.no_permission": "§cYou don't have permission to use this command",
+  "authshield.setfirstspawn.success": "§aSet initial spawn point for new players",
+  "authshield.reload.success": "§aConfiguration reloaded successfully!",
+  "authshield.reload.failed": "§cFailed to reload configuration, check console for details",
+  "authshield.usage.register": "§eUsage: /register <password> <confirmPassword>",
+  "authshield.usage.login": "§eUsage: /login <password>",
+  "authshield.usage.changepassword": "§eUsage: /changepassword <oldPassword> <newPassword>",
+  "authshield.help.header": "§6=== AuthShield Help ===",
+  "authshield.help.register": "§e/register <password> <confirmPassword> §7- Register account",
+  "authshield.help.login": "§e/login <password> §7- Login to account",
+  "authshield.help.changepassword": "§e/changepassword <oldPassword> <newPassword> §7- Change password",
+  "authshield.help.cp": "§e/cp <oldPassword> <newPassword> §7- Change password (shortcut)",
+  "authshield.help.admin.unregister": "§c/authshield unregister <player> §7- Unregister a player",
+  "authshield.help.admin.setfirstspawn": "§c/authshield setfirstspawn §7- Set initial spawn for new players",
+  "authshield.help.footer": "§6====================="
 } 
