--- a/src/main/resources/assets/authshield/lang/zh_cn.json
+++ b/src/main/resources/assets/authshield/lang/zh_cn.json
@@ -1,51 +1,53 @@
 {
-  "authshield.title": "§c§l需要登录账户",
-  "authshield.subtitle": "§e使用 §b/login <密码> §e登录",
+  "authshield.title": "§d欢迎来到服务器",
+  "authshield.subtitle": "§e请输入 /login <密码> 登录",
   "authshield.title.register": "§c§l需要注册账户",
   "authshield.subtitle.register": "§e使用 §b/register <密码> <确认密码> §e注册",
-  "authshield.actionbar": "§7请登录后继续游戏",
-  "authshield.register": "§e▶ 使用 §b/register <密码> <确认密码> §e注册账户",
-  "authshield.login": "§e▶ 使用 §b/login <密码> §e登录账户",
-  "authshield.login.success": "§a✔ 登录成功，祝您游戏愉快",
-  "authshield.login.already": "§e您已经登录了",
-  "authshield.login.incorrect": "§c✖ 密码错误",
-  "authshield.login.timeout": "§c由于 §e60秒 §c内未登录，您被移出服务器",
-  "authshield.login.too_many_attempts": "§c登录尝试次数过多，请在 §e%s §c分钟后重试",
-  "authshield.command.needlogin": "§c请先登录后使用指令",
-  "authshield.register.exists": "§e该账户已注册，请直接登录",
+  "authshield.actionbar": "§7请先登录后才能进行操作",
+  "authshield.register": "§e请使用 /register <密码> <确认密码> 注册",
+  "authshield.login": "§e请使用 /login <密码> 登录",
+  "authshield.login.success": "§a登录成功！",
+  "authshield.login.already": "§c你已经登录了",
+  "authshield.login.incorrect": "§c密码错误",
+  "authshield.login.timeout": "§c登录超时，请重新进入服务器",
+  "authshield.login.too_many_attempts": "§c登录尝试次数过多，请 %d 分钟后重试",
+  "authshield.login.not_registered": "§c你还没有注册",
+  "authshield.command.needlogin": "§c请先登录后再使用命令",
+  "authshield.register.exists": "§c该账号已经注册",
   "authshield.register.nomatch": "§c两次输入的密码不一致",
-  "authshield.register.success": "§a✔ 注册成功，开始游戏吧",
+  "authshield.register.success": "§a注册成功！",
   "authshield.register.password.tooshort": "§c密码太短 (最少 §e%s §c个字符)",
   "authshield.register.password.toolong": "§c密码太长 (最多 §e%s §c个字符)",
   "authshield.register.password.needsymbol": "§c需要包含特殊字符 §e(!@#$%%^&*)",
   "authshield.register.password.needupper": "§c需要包含大写字母 §e(A-Z)",
   "authshield.register.password.neednumber": "§c需要包含数字 §e(0-9)",
-  "authshield.drop.needlogin": "§c请先登录后丢弃物品",
+  "authshield.drop.needlogin": "§c请先登录后再丢弃物品",
   "authshield.mod.welcome": "§b欢迎使用 §eAuthShield §b安全系统",
   "authshield.error.init": "§c初始化失败",
   "authshield.error.load_password": "§c密码文件加载失败",
   "authshield.info.password_loaded": "§a密码数据加载完成",
-  "authshield.unregister.success": "§a已注销玩家 §e%s §a的账户",
-  "authshield.unregister.not_found": "§c找不到玩家 §e%s §c的账户",
-  "authshield.unregister.no_permission": "§c权限不足",
-  "authshield.unregister.kick_message": "§c您的账户已被管理员注销",
-  "authshield.changepassword.success": "§a✔ 密码修改成功",
-  "authshield.changepassword.incorrect": "§c✖ 原密码错误",
-  "authshield.changepassword.same": "§e新密码不能与原密码相同",
+  "authshield.unregister.success": "§a已注销玩家 %s 的注册信息",
+  "authshield.unregister.not_found": "§c找不到玩家 %s",
+  "authshield.unregister.no_permission": "§c你没有权限执行此命令",
+  "authshield.unregister.kick_message": "§c你的注册信息已被管理员注销",
+  "authshield.changepassword.success": "§a密码修改成功！",
+  "authshield.changepassword.incorrect": "§c旧密码错误",
+  "authshield.changepassword.same": "§c新密码不能与旧密码相同",
   "authshield.changepassword.not_logged_in": "§c请先登录后再修改密码",
-  "authshield.setfirstspawn.success": "§a✔ 已设置新玩家初始登录位置",
-  "authshield.setfirstspawn.no_permission": "§c权限不足",
+  "authshield.setfirstspawn.success": "§a已设置新玩家初始出生点",
+  "authshield.setfirstspawn.no_permission": "§c你没有权限执行此命令",
   "authshield.firstspawn.not_set": "§c尚未设置初始登录位置",
-  "authshield.help.header": "§b=== AuthShield 帮助 ===",
-  "authshield.help.footer": "§b=====================",
-  "authshield.help.register": "§e▶ /register <密码> <确认密码> §7- 注册账户 §8(/reg)",
-  "authshield.help.login": "§e▶ /login <密码> §7- 登录账户 §8(/l)",
-  "authshield.help.changepassword": "§e▶ /changepassword <旧密码> <新密码> §7- 修改密码",
-  "authshield.help.cp": "§e▶ /cp <旧密码> <新密码> §7- 修改密码(简写)",
-  "authshield.help.admin.unregister": "§c▶ /authshield unregister <玩家名> §7- 注销指定玩家账户",
-  "authshield.help.admin.setfirstspawn": "§c▶ /authshield setfirstspawn §7- 设置新玩家初始登录位置",
-  "authshield.usage.register": "§e用法: §b/register <密码> <确认密码> §7- 创建您的账户",
-  "authshield.usage.login": "§e用法: §b/login <密码> §7- 登录您的账户",
-  "authshield.usage.changepassword": "§e用法: §b/changepassword <旧密码> <新密码> §7- 修改您的密码",
-  "authshield.usage.cp": "§e用法: §b/cp <旧密码> <新密码> §7- 修改您的密码"
+  "authshield.help.header": "§6=== AuthShield 帮助 ===",
+  "authshield.help.footer": "§6=====================",
+  "authshield.help.register": "§e/register <密码> <确认密码> §7- 注册账号",
+  "authshield.help.login": "§e/login <密码> §7- 登录账号",
+  "authshield.help.changepassword": "§e/changepassword <旧密码> <新密码> §7- 修改密码",
+  "authshield.help.cp": "§e/cp <旧密码> <新密码> §7- 修改密码（简写）",
+  "authshield.help.admin.unregister": "§c/authshield unregister <玩家名> §7- 注销指定玩家",
+  "authshield.help.admin.setfirstspawn": "§c/authshield setfirstspawn §7- 设置新玩家初始出生点",
+  "authshield.usage.register": "§e用法: /register <密码> <确认密码>",
+  "authshield.usage.login": "§e用法: /login <密码>",
+  "authshield.usage.changepassword": "§e用法: /changepassword <旧密码> <新密码>",
+  "authshield.reload.success": "§a配置文件重载成功！",
+  "authshield.reload.failed": "§c配置文件重载失败，请查看控制台获取详细信息"
 } 
