初始化提交：完成基本功能开发

--- a/src/main/resources/assets/authshield/lang/en_us.json
+++ b/src/main/resources/assets/authshield/lang/en_us.json
@@ -1,52 +1,53 @@
 {
-  "authshield.title": "§dWelcome to the server",
-  "authshield.subtitle": "§ePlease type /login <password> to login",
-  "authshield.actionbar": "§7Please login to perform actions",
-  "authshield.register": "§ePlease use /register <password> <confirmPassword> to register",
-  "authshield.login": "§ePlease use /login <password> to login",
-  "authshield.login.title": "§c§lLogin Required",
-  "authshield.login.subtitle": "§eUse /login <password> to play",
-  "authshield.login.success": "§aLogin successful!",
-  "authshield.login.already": "§cYou are already logged in",
-  "authshield.login.incorrect": "§cIncorrect password",
-  "authshield.login.timeout": "§cLogin timeout, please rejoin the server",
-  "authshield.login.too_many_attempts": "§cToo many login attempts, please try again in %d minutes",
+  "authshield.title": "§e[ §bLogin §e]",
+  "authshield.subtitle": "§7Use §f/login §7<password> §7to login",
+  "authshield.title.register": "§e[ §bRegistration §e]",
+  "authshield.subtitle.register": "§7Use §f/register §7<password> §7<confirmPassword> §7to register",
+  "authshield.actionbar": "§7Please authenticate to continue playing",
+  "authshield.register": "§7Use §f/register §7<password> §7<confirmPassword> §7to create an account",
+  "authshield.login": "§7Use §f/login §7<password> §7to sign in",
+  "authshield.login.success": "§aLogin successful! Enjoy your game!",
+  "authshield.login.already": "§eYou're already logged in",
+  "authshield.login.incorrect": "§cIncorrect password, please try again",
+  "authshield.login.timeout": "§cYou have been disconnected for not logging in within §7%s §cseconds",
+  "authshield.login.too_many_attempts": "§cToo many login attempts. Please try again in §7%s §cminutes",
+  "authshield.login.not_registered": "§eYou haven't registered yet. Please register first",
   "authshield.command.needlogin": "§cPlease login before using commands",
-  "authshield.register.exists": "§cThis account is already registered",
-  "authshield.register.nomatch": "§cPasswords do not match",
-  "authshield.register.success": "§aRegistration successful!",
-  "authshield.register.password.tooshort": "§cPassword is too short (minimum %s characters)",
-  "authshield.register.password.toolong": "§cPassword is too long (maximum %s characters)",
-  "authshield.register.password.needsymbol": "§cPassword must contain at least one special character",
-  "authshield.register.password.needupper": "§cPassword must contain at least one uppercase letter",
-  "authshield.register.password.neednumber": "§cPassword must contain at least one number",
+  "authshield.register.exists": "§eThis account is already registered. Please login directly",
+  "authshield.register.nomatch": "§cPasswords do not match, please try again",
+  "authshield.register.success": "§aRegistration successful! Let's begin your adventure!",
+  "authshield.register.password.tooshort": "§cPassword too short §7(minimum §f%s §7characters)",
+  "authshield.register.password.toolong": "§cPassword too long §7(maximum §f%s §7characters)",
+  "authshield.register.password.needsymbol": "§cPassword must contain special characters §7(!@#$%%^&*)",
+  "authshield.register.password.needupper": "§cPassword must contain uppercase letters §7(A-Z)",
+  "authshield.register.password.neednumber": "§cPassword must contain numbers §7(0-9)",
   "authshield.drop.needlogin": "§cPlease login before dropping items",
-  "authshield.mod.welcome": "Welcome to use AuthShield mod",
-  "authshield.error.init": "Failed to initialize AuthShield",
-  "authshield.error.load_password": "Failed to load password file",
-  "authshield.info.password_loaded": "AuthShield password data loaded",
-  "authshield.login.not_registered": "§cYou are not registered",
-  "authshield.changepassword.not_logged_in": "§cPlease login before changing password",
-  "authshield.changepassword.incorrect": "§cOld password is incorrect",
-  "authshield.changepassword.same": "§cNew password cannot be the same as old password",
+  "authshield.mod.welcome": "§e[ §bAuthShield §e] §7Security system loaded",
+  "authshield.error.init": "§cSystem initialization failed",
+  "authshield.error.load_password": "§cFailed to load password file",
+  "authshield.info.password_loaded": "§aPassword data loaded successfully",
+  "authshield.unregister.success": "§aSuccessfully unregistered player §f%s §aaccount",
+  "authshield.unregister.not_found": "§cCannot find account for player §f%s",
+  "authshield.unregister.no_permission": "§cSorry, you don't have permission for this action",
+  "authshield.unregister.kick_message": "§cYour account has been unregistered by an admin",
   "authshield.changepassword.success": "§aPassword changed successfully!",
-  "authshield.unregister.no_permission": "§cYou don't have permission to use this command",
-  "authshield.unregister.not_found": "§cCannot find player %s",
-  "authshield.unregister.success": "§aUnregistered player %s",
-  "authshield.unregister.kick_message": "§cYour registration has been removed by an admin",
-  "authshield.setfirstspawn.no_permission": "§cYou don't have permission to use this command",
-  "authshield.setfirstspawn.success": "§aSet initial spawn point for new players",
+  "authshield.changepassword.incorrect": "§cOriginal password is incorrect",
+  "authshield.changepassword.same": "§eNew password cannot be the same as the old one",
+  "authshield.changepassword.not_logged_in": "§cPlease login before changing your password",
+  "authshield.setfirstspawn.success": "§aInitial login position set for new players",
+  "authshield.setfirstspawn.no_permission": "§cSorry, you don't have permission to set spawn point",
+  "authshield.firstspawn.not_set": "§cInitial login position not set",
+  "authshield.help.header": "§e✦═══ §bAuthShield §7Help Menu §e═══✦",
+  "authshield.help.footer": "§e✦════════════════════✦",
+  "authshield.help.register": "§7➤ /register §f<password> §f<confirmPassword> §7- Create account §8(/reg)",
+  "authshield.help.login": "§7➤ /login §f<password> §7- Login to account §8(/l)",
+  "authshield.help.changepassword": "§7➤ /changepassword §f<oldPassword> §f<newPassword> §7- Change password §8(/cp)",
+  "authshield.help.admin.unregister": "§c➤ /authshield unregister §f<player> §7- Unregister specified player",
+  "authshield.help.admin.setfirstspawn": "§c➤ /authshield setfirstspawn §7- Set initial login position for new players",
+  "authshield.usage.register": "§7Usage: §f/register §7<password> §7<confirmPassword> §7- Create your account",
+  "authshield.usage.login": "§7Usage: §f/login §7<password> §7- Login to your account",
+  "authshield.usage.changepassword": "§7Usage: §f/changepassword §7<oldPassword> §7<newPassword> §7- Change your password",
+  "authshield.usage.cp": "§7Usage: §f/cp §7<oldPassword> §7<newPassword> §7- Change your password",
   "authshield.reload.success": "§aConfiguration reloaded successfully!",
-  "authshield.reload.failed": "§cFailed to reload configuration, check console for details",
-  "authshield.usage.register": "§eUsage: /register <password> <confirmPassword>",
-  "authshield.usage.login": "§eUsage: /login <password>",
-  "authshield.usage.changepassword": "§eUsage: /changepassword <oldPassword> <newPassword>",
-  "authshield.help.header": "§6=== AuthShield Help ===",
-  "authshield.help.register": "§e/register <password> <confirmPassword> §7- Register account",
-  "authshield.help.login": "§e/login <password> §7- Login to account",
-  "authshield.help.changepassword": "§e/changepassword <oldPassword> <newPassword> §7- Change password",
-  "authshield.help.cp": "§e/cp <oldPassword> <newPassword> §7- Change password (shortcut)",
-  "authshield.help.admin.unregister": "§c/authshield unregister <player> §7- Unregister a player",
-  "authshield.help.admin.setfirstspawn": "§c/authshield setfirstspawn §7- Set initial spawn for new players",
-  "authshield.help.footer": "§6====================="
+  "authshield.reload.failed": "§cFailed to reload configuration, check console for details"
 } 
