--- a/src/main/resources/assets/authshield/lang/zh_cn.json
+++ b/src/main/resources/assets/authshield/lang/zh_cn.json
@@ -1,53 +1,53 @@
 {
-  "authshield.title": "§d欢迎来到服务器",
-  "authshield.subtitle": "§e请输入 /login <密码> 登录",
-  "authshield.title.register": "§c§l需要注册账户",
-  "authshield.subtitle.register": "§e使用 §b/register <密码> <确认密码> §e注册",
-  "authshield.actionbar": "§7请先登录后才能进行操作",
-  "authshield.register": "§e请使用 /register <密码> <确认密码> 注册",
-  "authshield.login": "§e请使用 /login <密码> 登录",
-  "authshield.login.success": "§a登录成功！",
-  "authshield.login.already": "§c你已经登录了",
-  "authshield.login.incorrect": "§c密码错误",
-  "authshield.login.timeout": "§c登录超时，请重新进入服务器",
-  "authshield.login.too_many_attempts": "§c登录尝试次数过多，请 %d 分钟后重试",
-  "authshield.login.not_registered": "§c你还没有注册",
-  "authshield.command.needlogin": "§c请先登录后再使用命令",
-  "authshield.register.exists": "§c该账号已经注册",
-  "authshield.register.nomatch": "§c两次输入的密码不一致",
-  "authshield.register.success": "§a注册成功！",
-  "authshield.register.password.tooshort": "§c密码太短 (最少 §e%s §c个字符)",
-  "authshield.register.password.toolong": "§c密码太长 (最多 §e%s §c个字符)",
-  "authshield.register.password.needsymbol": "§c需要包含特殊字符 §e(!@#$%%^&*)",
-  "authshield.register.password.needupper": "§c需要包含大写字母 §e(A-Z)",
-  "authshield.register.password.neednumber": "§c需要包含数字 §e(0-9)",
-  "authshield.drop.needlogin": "§c请先登录后再丢弃物品",
-  "authshield.mod.welcome": "§b欢迎使用 §eAuthShield §b安全系统",
-  "authshield.error.init": "§c初始化失败",
-  "authshield.error.load_password": "§c密码文件加载失败",
-  "authshield.info.password_loaded": "§a密码数据加载完成",
-  "authshield.unregister.success": "§a已注销玩家 %s 的注册信息",
-  "authshield.unregister.not_found": "§c找不到玩家 %s",
-  "authshield.unregister.no_permission": "§c你没有权限执行此命令",
-  "authshield.unregister.kick_message": "§c你的注册信息已被管理员注销",
-  "authshield.changepassword.success": "§a密码修改成功！",
-  "authshield.changepassword.incorrect": "§c旧密码错误",
-  "authshield.changepassword.same": "§c新密码不能与旧密码相同",
-  "authshield.changepassword.not_logged_in": "§c请先登录后再修改密码",
-  "authshield.setfirstspawn.success": "§a已设置新玩家初始出生点",
-  "authshield.setfirstspawn.no_permission": "§c你没有权限执行此命令",
-  "authshield.firstspawn.not_set": "§c尚未设置初始登录位置",
-  "authshield.help.header": "§6=== AuthShield 帮助 ===",
-  "authshield.help.footer": "§6=====================",
-  "authshield.help.register": "§e/register <密码> <确认密码> §7- 注册账号",
-  "authshield.help.login": "§e/login <密码> §7- 登录账号",
-  "authshield.help.changepassword": "§e/changepassword <旧密码> <新密码> §7- 修改密码",
-  "authshield.help.cp": "§e/cp <旧密码> <新密码> §7- 修改密码（简写）",
-  "authshield.help.admin.unregister": "§c/authshield unregister <玩家名> §7- 注销指定玩家",
-  "authshield.help.admin.setfirstspawn": "§c/authshield setfirstspawn §7- 设置新玩家初始出生点",
-  "authshield.usage.register": "§e用法: /register <密码> <确认密码>",
-  "authshield.usage.login": "§e用法: /login <密码>",
-  "authshield.usage.changepassword": "§e用法: /changepassword <旧密码> <新密码>",
-  "authshield.reload.success": "§a配置文件重载成功！",
-  "authshield.reload.failed": "§c配置文件重载失败，请查看控制台获取详细信息"
+  "authshield.title": "§b 请登录 ",
+  "authshield.subtitle": "§7➤ 使用 §f/login §7<密码> §7登录",
+  "authshield.title.register": "§b 请注册 ",
+  "authshield.subtitle.register": "§7➤ 使用 §f/register §7<密码> §7<确认密码> §7注册",
+  "authshield.actionbar": "§7❈ 请完成认证后继续游戏 ❈",
+  "authshield.register": "§7➤ 使用 §f/register §7<密码> §7<确认密码> §7注册账号",
+  "authshield.login": "§7➤ 使用 §f/login §7<密码> §7登录账号",
+  "authshield.login.success": "§a✔ 登录成功，祝您游戏愉快！",
+  "authshield.login.already": "§e⚠ 您已经登录过了",
+  "authshield.login.incorrect": "§c✖ 密码错误，请重新输入",
+  "authshield.login.timeout": "§c⚠ 由于 §7%s §c秒内未完成登录，您已被移出服务器",
+  "authshield.login.too_many_attempts": "§c⚠ 登录尝试次数过多，请在 §7%s §c分钟后再试",
+  "authshield.login.not_registered": "§e⚠ 您还没有注册账号，请先注册",
+  "authshield.command.needlogin": "§c⚠ 请先登录后再使用指令",
+  "authshield.register.exists": "§e⚠ 该账号已注册，请直接登录即可",
+  "authshield.register.nomatch": "§c✖ 两次输入的密码不一致，请重新输入",
+  "authshield.register.success": "§a✔ 注册成功，开始您的冒险吧！",
+  "authshield.register.password.tooshort": "§c✖ 密码太短 §7(最少需要 §f%s §7个字符)",
+  "authshield.register.password.toolong": "§c✖ 密码太长 §7(最多允许 §f%s §7个字符)",
+  "authshield.register.password.needsymbol": "§c✖ 密码需要包含特殊字符 §7(!@#$%%^&*)",
+  "authshield.register.password.needupper": "§c✖ 密码需要包含大写字母 §7(A-Z)",
+  "authshield.register.password.neednumber": "§c✖ 密码需要包含数字 §7(0-9)",
+  "authshield.drop.needlogin": "§c⚠ 请先登录后再丢弃物品",
+  "authshield.mod.welcome": "§e[ §bAuthShield §e] §7✦ 安全系统已加载 ✦",
+  "authshield.error.init": "§c✖ 系统初始化失败",
+  "authshield.error.load_password": "§c✖ 密码文件加载失败",
+  "authshield.info.password_loaded": "§a✔ 密码数据加载完成",
+  "authshield.unregister.success": "§a✔ 已成功注销玩家 §f%s §a的账户",
+  "authshield.unregister.not_found": "§c✖ 找不到玩家 §f%s §c的账户信息",
+  "authshield.unregister.no_permission": "§c✖ 抱歉，您没有执行此操作的权限",
+  "authshield.unregister.kick_message": "§c⚠ 您的账户已被管理员注销",
+  "authshield.changepassword.success": "§a✔ 密码修改成功！",
+  "authshield.changepassword.incorrect": "§c✖ 原密码输入错误",
+  "authshield.changepassword.same": "§e⚠ 新密码不能与原密码相同",
+  "authshield.changepassword.not_logged_in": "§c⚠ 请先登录后再修改密码",
+  "authshield.setfirstspawn.success": "§a✔ 已设置新玩家初始登录位置",
+  "authshield.setfirstspawn.no_permission": "§c✖ 抱歉，您没有设置出生点的权限",
+  "authshield.firstspawn.not_set": "§c⚠ 尚未设置初始登录位置",
+  "authshield.help.header": "§e✦═══ §bAuthShield §7帮助菜单 §e═══✦",
+  "authshield.help.footer": "§e✦════════════════════✦",
+  "authshield.help.register": "§7➤ /register §f<密码> §f<确认密码> §7- 注册账号 §8(/reg)",
+  "authshield.help.login": "§7➤ /login §f<密码> §7- 登录账号 §8(/l)",
+  "authshield.help.changepassword": "§7➤ /changepassword §f<旧密码> §f<新密码> §7- 修改密码 §8(/cp)",
+  "authshield.help.admin.unregister": "§c➤ /authshield unregister §f<玩家名> §7- 注销指定玩家账户",
+  "authshield.help.admin.setfirstspawn": "§c➤ /authshield setfirstspawn §7- 设置新玩家初始登录位置",
+  "authshield.usage.register": "§7➤ 用法：§f/register §7<密码> §7<确认密码> §7- 创建您的账号",
+  "authshield.usage.login": "§7➤ 用法：§f/login §7<密码> §7- 登录您的账号",
+  "authshield.usage.changepassword": "§7➤ 用法：§f/changepassword §7<旧密码> §7<新密码> §7- 修改您的密码",
+  "authshield.usage.cp": "§7➤ 用法：§f/cp §7<旧密码> §7<新密码> §7- 修改您的密码",
+  "authshield.reload.success": "§a✔ 配置重载成功！",
+  "authshield.reload.failed": "§c✖ 配置重载失败，请查看控制台获取详细信息"
 } 
