优化代码：1. 改进密码加密方法，使用PBKDF2 2. 删除重复配置 3. 统一日志消息语言

--- a/src/main/resources/assets/authshield/lang/en_us.json
+++ b/src/main/resources/assets/authshield/lang/en_us.json
@@ -49,5 +49,10 @@
   "authshield.usage.changepassword": "§7Usage: §f/changepassword §7<oldPassword> §7<newPassword> §7- Change your password",
   "authshield.usage.cp": "§7Usage: §f/cp §7<oldPassword> §7<newPassword> §7- Change your password",
   "authshield.reload.success": "§aConfiguration reloaded successfully!",
-  "authshield.reload.failed": "§cFailed to reload configuration, check console for details"
+  "authshield.reload.failed": "§cFailed to reload configuration, check console for details",
+  "authshield.password.load.failed": "§c✖ Failed to load password file",
+  "authshield.password.saved": "§a✔ Passwords saved to file: {}",
+  "authshield.password.save.failed": "§c✖ Failed to save password file",
+  "authshield.password.hash.failed": "§c✖ Failed to hash password",
+  "authshield.password.verify.failed": "§c✖ Failed to verify password"
 } 
